<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@android:color/black">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:color="@android:color/white"
        android:stretchColumns="@string/stretch_columns" android:layout_margin="@dimen/layout_margin_five">
        <TableRow
            android:id="@+id/titleTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/titleLabelTextView"
                style="@style/MovieLabelTextView"
                android:text="@string/title_field_text"/>
            <TextView
                android:id="@+id/titleTextView"
                style="@style/MovieTextView"/>
        </TableRow>

        <TableRow
            android:id="@+id/yearTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/yearLabelTextView"
                style="@style/MovieLabelTextView"
                android:text="@string/year_field_text"/>
            <TextView
                android:id="@+id/yearTextView"
                style="@style/MovieTextView"/>
        </TableRow>

        <TableRow
            android:id="@+id/directorTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/directorLabelTextView"
                style="@style/MovieLabelTextView"
                android:text="@string/director_field_text"/>
            <TextView
                android:id="@+id/directorTextView"
                style="@style/MovieTextView"/>
        </TableRow>

        <TableRow
            android:id="@+id/mpRatingTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/mpRatingLabelTextView"
                style="@style/MovieLabelTextView"
                android:text="@string/mp_rating_field_text"/>
            <TextView
                android:id="@+id/mpRatingTextView"
                style="@style/MovieTextView"/>
        </TableRow>

        <TableRow
            android:id="@+id/runtimeTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/runtimeLabelTextView"
                style="@style/MovieLabelTextView"
                android:text="@string/runtime_field_text"/>
            <TextView
                android:id="@+id/runtimeTextView"
                style="@style/MovieTextView"/>
        </TableRow>
    </TableLayout>
</ScrollView>