<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@android:color/black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout"
        android:background="@android:color/black"
        android:color="@android:color/white"
        android:orientation="vertical"
        android:padding="@dimen/padding_five">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleEditText"
            android:hint="@string/hint_title"
            android:imeOptions="actionNext"
            android:inputType="textPersonName|textCapWords"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/tertiary_text_light"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/yearEditText"
            android:hint="@string/hint_year"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/tertiary_text_light"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/directorEditText"
            android:hint="@string/hint_director"
            android:imeOptions="actionNext"
            android:inputType="textPersonName|textCapWords"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/tertiary_text_light"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mpRatingEditText"
            android:hint="@string/hint_motion_picture_rating"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/tertiary_text_light"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/runtimeEditText"
            android:hint="@string/hint_runtime"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/tertiary_text_light"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveMovieButton"
            android:layout_marginTop="@dimen/layout_margintop_fifteen"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_text"/>
    </LinearLayout>
</ScrollView>